# luavgl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  xmake.lua
.github/ISSUE_TEMPLATE/: config.yml  dev-discussion.yml
.github/workflows/: ci.yml
cmake/: FindLuaJIT.cmake
examples/: analogTime.lua  animation.lua  canvas.lua  declarative.lua  dropdown.lua  examples.lua  extension.lua  flexLayout.lua  font.lua  fs.lua  gesture.lua  group.lua  indev.lua  keyboard.lua  luaC.lua  objid.lua  pointer.lua  protectedcall.lua  roller.lua  test.lua  tests.lua  userdata.lua  uservalue.lua
examples/flappyBird/: flappyBird.lua
simulator/: CMakeLists.txt  extension.c  extension.h  extension.lua  lua_in_C.c  lv_conf.h  lv_drv_conf.h  lv_pointer.h  main.c  mouse_cursor_icon.c  pointer.c  ui.lua
simulator/widgets/: analog_time.c  extension.c  lv_analog_time.c  lv_analog_time.h  lv_analog_time_properties.c  lv_obj_property_names.h  lv_pointer.c  lv_pointer.h  lv_property_extend.h  lv_style_properties.h  pointer.c  widgets.c  widgets.h  widgets.lua
src/: anim.c  constants.c  disp.c  draw_buf.c  event.c  font.c  fs.c  group.c  img.c  indev.c  label.c  luavgl.c  luavgl.h  lugl.c  lugl.h  lugl.lua  lvgl.lua  obj.c  palette.c  private.h  rotable.c  rotable.h  snapshot.c  style.c  timer.c  util.c
src/test/: font-test.lua
src/widgets/: arc.c  button.c  calendar.c  canvas.c  checkbox.c  dropdown.c  img.c  keyboard.c  label.c  led.c  list.c  roller.c  textarea.c  widgets.c
